--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -56,13 +56,10 @@
             <ul>
                 <li>Home</li>
                 <li>Accounts</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Settings</li>
+                <li>Projects</li>
+                <li>Trainig</li>
+               
             </ul>
          </div>
     </aside>
