--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -1,12 +1,20 @@
 
-<div class="main-container">
-<div class="projects-container">
-    <div class="card-projects text-center p-3" *ngFor="let project of projects">
-        <i [class]="project.icon"></i>
-        <h3>{{project.title}}</h3>
+<main class="content">
+    <!-- Main content -->
+    <div class="content">
+        <h1>BreadCrumb</h1>
+        <p>
+            Indicate the current page’s location within a navigational hierarchy that
+            <span> automatically adds separators via CSS. </span>
+        </p>
+        <div class="card d-flex flex-row" style="width: 28rem">
+            <img src="	https://srv.carbonads.net/static/30242/d4d1168c21c4a969fe187b85cedb06bd4a7cbb65"
+                class="card-img-left" style="width: 40%; object-fit: cover; margin: auto" />
+            <div class="card-body p-3">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text…</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
     </div>
-
-</div>
-
-</div>
-
+</main>
