--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="header mt-4">
+  <div class="headerd">
     <h1 class="text-primary" style="text-align: center">Welcome</h1>
     <i class="fa-solid fa-house-night" style="color: red"></i>
     <div class="card-content p-3">
