--- a/src/app/navbar/navbar.css
+++ b/src/app/navbar/navbar.css
@@ -34,6 +34,34 @@ input[placeholder="Dashboard"]::placeholder {
     padding: 2px;
     font-style: italic;
 }
+ .card-body {
+  border: 1px solid  grey;
+  border-radius: 12px;
+  padding: 12px;
+  color: white;
+box-shadow: 0px 0px 10px #6f42c1;    /* border-radius: 50%; */
+}
+.layout-wrapper {
+    display: flex;
+    height: calc(100vh - 60px);
+    /* margin-top: 60px; */
+}
+
+/* Sidebar stays fixed width */
+.sidebar {
+    width: 250px;
+    background: rgb(15 23 42);
+    color: grey;
+    padding: 20px;
+}
+
+/* MAIN CONTENT */
+.content-area {
+    flex: 1;
+    /* padding: 30px; */
+    background: #f5f5f7;
+    overflow-y: auto;
+}
 .sidebar ul li {
     margin-top: 1gi0px;
     /* space between each li */
