--- a/src/app/dashboard/dashboard.css
+++ b/src/app/dashboard/dashboard.css
@@ -2,7 +2,6 @@
 
 .container {
     margin-top: 15px;
-   
     max-width: 1200px;
     padding: 20px;
     background-color: #f0f0f0;
@@ -10,6 +9,15 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+
+.container-fluid{
+margin-top: 15px;
+    max-width: 1200px;
+    padding: 20px;
+    border-radius: 8px;
+        background-color: #f0f0f0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 .header {
     display: flex;
     flex-direction: column;
