--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -25,6 +25,7 @@
         class="octicon octicon-mark-github mr-2 text-white"
       >
         <path d="M12 1C5.923 1..."></path>
+
       </svg>
 
       <a class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Download</a>
@@ -71,10 +72,10 @@
     </div>
 
     <div>
-      <div class="mt-4 cr" style="width: 12rem; height: 12rem;">
-        <div class="card-body">
+      <div class="mt-4 cr" style="width: 12rem; height: 12rem">
+        <div class="card-body mt-2">
           <h6 class="title">Create & Optimize</h6>
-          <div class=" mt-3">
+          <div class="mt-3">
             <div class="d-flex align-items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -98,69 +99,187 @@
               </svg>
               <p class="card-text ml-2">Resume Studio</p>
             </div>
-            <div class="d-flex align-items-center" >
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
                 class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
-                data-source-location="components/layout/Sidebar:180:30" data-dynamic-content="false">
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
                 <rect width="20" height="16" x="2" y="4" rx="2"></rect>
                 <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-            </svg>
-                <p class="card-text ml-2">Resume Studio</p>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
             </div>
             <div class="d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
                 class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
-                data-source-location="components/layout/Sidebar:180:30" data-dynamic-content="false">
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
                 <rect width="20" height="16" x="2" y="4" rx="2"></rect>
                 <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-            </svg>
-                <p class="card-text ml-2">Resume Studio</p>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
             </div>
           </div>
         </div>
-        <div class="card-body">
-            <h6 class="title">Create & Optimize</h6>
-            <div class=" mt-3">
-                <div class="d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-file-text text-white flex-shrink-0 group-hover:text-white transition-colors"
-                        data-source-location="components/layout/Sidebar:180:30" data-dynamic-content="false">
-                        <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path>
-                        <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
-                        <path d="M10 9H8"></path>
-                        <path d="M16 13H8"></path>
-                        <path d="M16 17H8"></path>
-                    </svg>
-                    <p class="card-text ml-2">Resume Studio</p>
-                </div>
-                <div class="d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
-                        data-source-location="components/layout/Sidebar:180:30" data-dynamic-content="false">
-                        <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-                        <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-                    </svg>
-                    <p class="card-text ml-2">Resume Studio</p>
-                </div>
-                <div class="d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
-                        data-source-location="components/layout/Sidebar:180:30" data-dynamic-content="false">
-                        <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-                        <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
-                    </svg>
-                    <p class="card-text ml-2">Resume Studio</p>
-                </div>
+        <div class="card-body mt-2">
+          <h6 class="title">Create & Optimize</h6>
+          <div class="mt-3">
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-file-text text-white flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path>
+                <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                <path d="M10 9H8"></path>
+                <path d="M16 13H8"></path>
+                <path d="M16 17H8"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
             </div>
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
+            </div>
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
+            </div>
+          </div>
         </div>
-        <div class="card-body">
+        <div class="card-body mt-2">
+          <h6 class="title">Create & Optimize</h6>
+          <div class="mt-3">
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-file-text text-white flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"></path>
+                <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                <path d="M10 9H8"></path>
+                <path d="M16 13H8"></path>
+                <path d="M16 17H8"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
+            </div>
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
+            </div>
+            <div class="d-flex align-items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-mail text-purple-400 flex-shrink-0 group-hover:text-white transition-colors"
+                data-source-location="components/layout/Sidebar:180:30"
+                data-dynamic-content="false"
+              >
+                <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+              </svg>
+              <p class="card-text ml-2">Resume Studio</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-body mt-2">
             <h6 class="title">Create & Optimize</h6>
-            <div class=" mt-3">
+            <div class="mt-3">
                 <div class="d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
