--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
     height: 150px;
     border-radius: 8px;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     font-weight: bold;
     font-size: 18px;
