--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -37,7 +37,7 @@
     <p class="mb-2">
       Run an AI analysis to make your resume ATS-friendly and increase interview chances by 40%!
     </p>
-    <button class="btn btn-warning">Analyze Now →</button>
+    <button class="btn btn-warning bounce-btn" (click) =gotoDashboard()>Shop Now →</button>
   </div>
 </div>
 
