--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -22,7 +22,13 @@
 
       </svg>
 
-      <a class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Download</a>
+<div class="d-flex align-items-center border rounded p-1" style="width: 250px;">
+<i class="fa-solid fa-box-magnifying-glass"></i>  <input type="text" placeholder="Search" class="border-0 flex-grow-1" />
+</div>
+      <button class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Download</button>
+      <button class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Add to Cart</button>
+      <i class="fa-solid fa-cart-arrow-down"></i>
+
 
       <span class="circle">P</span>
     </div>
