--- a/src/app/app.html
+++ b/src/app/app.html
@@ -74,7 +74,8 @@
 
         <!-- Scrollable content -->
         <div class="content flex-grow-1 overflow-auto p-4">
-            <app-user-management></app-user-management>
+            <!-- <app-user-management></app-user-management> -->
+    <router-outlet></router-outlet>
         </div>
     </div>
   
