--- a/src/app/dashboard/dashboard.css
+++ b/src/app/dashboard/dashboard.css
@@ -96,5 +96,36 @@ height: 300px;
 }
 
 .custom-card{
-    border: 2px solid grey;
+    /* border: 2px solid grey; */
 }
+
+
+/* FOOTER CODE */
+.footer {
+  /* background-color: #111827; */
+  color:#000;
+  padding: 40px 0;
+}
+
+.footer h6 {
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.footer ul li {
+  margin-bottom: 8px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.footer ul li:hover {
+  text-decoration: underline;
+}
+.mini{
+  
+      background-color: #111827;
+      color: white;
+      padding: 4px 0;
+    
+}
+/* FOOTER CODE */
