--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -574,6 +574,6 @@
   </div>
 </footer>
 
-<footer class="mini">
+<!-- <footer class="mini"> -->
   <div><P class="text-center">Copyright © 2023, All Rights Reserved</P></div>
-</footer>
+<!-- </footer> -->
