--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -26,7 +26,7 @@
 <i class="fa-solid fa-box-magnifying-glass"></i>  <input type="text" placeholder="Search" class="border-0 flex-grow-1" />
 </div>
       <button class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Download</button>
-      <button class="btn mr-2 p-1" style="border: 1px solid orange" href="#">Add to Cart</button>
+      <button class="btn mr-2 p-1" style="border: 1px solid orange"  (click)="addToCart()">Add to Cart</button>
       <i class="fa-solid fa-cart-arrow-down"></i>
 
 
