--- a/src/app/add-tocart/add-tocart.html
+++ b/src/app/add-tocart/add-tocart.html
@@ -50,7 +50,11 @@
             </div>
             <div class="row mt-3 mx-1">
                 <div class="col-12  button d-flex justify-content-end">
-<button class="btn btn-primary">Cancel
+<button class="btn btn-primary mx-2">Cancel
+
+</button>
+
+<button class="btn btn-primary">Save
 
 </button>
                 </div>
