--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,37 +4,37 @@
 
     <div [class.collapsed]="isSidebarCollapsed" class=" text-white p-3 sidebar flex-shrink-0">
         <ul class="nav flex-column">
-            <li class="nav-item  my-2">
+            <li class="nav-item  my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/dashboard">
                     <i class="fa-solid fa-house"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">Dashboard</span>
                 </a>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/users">
                     <i class="fa-solid fa-users"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">Users</span>
                 </a>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/explore">
                     <i class="fa-solid fa-gear"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">explore</span>
                 </a>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/form">
                     <i class="fa-solid fa-gear"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">Contact Us</span>
                 </a>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/settings">
                     <i class="fa-solid fa-gear"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">Settings</span>
                 </a>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center justify-content-between"
                     (click)="toggleContactSubmenu()" style="cursor: pointer">
                     <div class="d-flex align-items-center">
@@ -58,7 +58,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item my-2">
+            <li class="nav-item my-2 link">
                 <a class="nav-link text-white d-flex align-items-center" routerLink="/dealership">
                     <i class="fa-solid fa-gear"></i>
                     <span class="mx-2" *ngIf="!isSidebarCollapsed">Dealership</span>
