--- a/src/app/training/training.css
+++ b/src/app/training/training.css
@@ -8,10 +8,11 @@
 
 .card-training {
     width: 200px;
-    background: #f8f9fa;
+    background: darkgrey;
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 .training-padding{
     display: flex;
@@ -35,4 +36,41 @@
     font-size: 14px;
     /* decrease as needed */
     margin: 0;
+}
+
+.training{
+    color: white;
+}
+i{
+    color: white;
+}
+
+.content{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.image-left {
+    width: 200px;
+    height: auto;
+    border-radius: 8px;
+}
+.bg-white{
+box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;}
+
+@media (max-width: 768px) {
+    .training-container{
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+    .content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .image-left {
+        width: 100%;
+    }
 }
