--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -12,7 +12,7 @@
         <li><a routerLink="/people" class="nav-link">People</a></li>
         <li><a routerLink="/projects" class="nav-link">Projects</a></li>
         <li><a routerLink="/training" class="nav-link">Training</a></li>
-        <li><a routerLink="/feature/calendar" class="nav-link">Calendar</a></li>
+        <li><a routerLink="/Calendar" class="nav-link">Calendar</a></li>
       </ul>
     </div>
 
