--- a/src/app/training/training.html
+++ b/src/app/training/training.html
@@ -1,30 +1,40 @@
 <div class="training-container mb-3">
-    <div class="card-training text-center p-3" *ngFor="let training of trainings">
-        <i [class]="training.icon"></i>
-        <h5  class="training">{{ training.title }}</h5>
-    </div>
+  <div class="card-training text-center p-3" *ngFor="let training of trainings">
+    <i [class]="training.icon" ></i>
+    <h5 class="training">{{ training.title }}</h5>
+  </div>
 </div>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12 bg-white p-4">
-            <div class="d-flex  justify-content-between align-items-center gap-4 content">
+  <div class="row">
+    <div class="col-12 bg-white p-4">
+      <div class="d-flex justify-content-between align-items-center gap-4 content">
+        <!-- Left Image -->
+        <img src="/images/wallpaper.jpg" class="img-fluid image-left" alt="" style="background-color: grey;" />
 
-                <!-- Left Image -->
-                <img src="/images/wallpaper.jpg" class="img-fluid image-left" alt="">
-
-                <!-- Right Content -->
-                <div class="">
-                    <h4>
-                        <i class="fa-solid fa-earth-americas"></i> World of Fashion
-                    </h4>
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                        Cumque unde voluptatem beatae totam.
-                    </p>
-                </div>
-
-            </div>
+        <!-- Right Content -->
+        <div class="" style="margin-left: 23px; border: 2px solid grey; padding: 23px">
+          <h4><i class="fa-solid fa-earth-americas"></i> World of Fashion</h4>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque unde voluptatem beatae
+            totam.
+          </p>
+          <div class="">
+            <button class="btn btn-warning" style="margin-right: 8px;">Add</button>
+            <button class="btn btn-info">More</button>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
+
+<section class="mt-3">
+  <div class="container">
+    <div class="d-flex justify-content-between ">
+        <div class="col-xl-3" style="background-color: grey; width: 250px; height: 250px;"></div>
+        <div class="col-xl-3" style="background-color: grey; width: 250px; height: 250px;"></div>
+        <div class="col-xl-3" style="background-color: grey;"></div>
+    </div>
+  </div>
+</section>
